fix(FEC-14497): Add Debug Info Option to the Player | Long pressing on ios mobile doesnt show "Copy debug info" button".
### Description of the Changes

Handle debug info context menu in iOS:

- use touch events instead of contextmenu event, which doesnt fire in
iOS
- protect against navigator.clipboard.writeText not working in iOS under
certain conditions (for example, it works in some iframe pages but
doesn't work in others)

Resolves FEC-14497

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -27,6 +27,8 @@ $bottom-bar-bottom-gutter: 4;
 $gui-gutter: 16;
 $gui-small-gutter: 8;
 $blur: 16px;
+$context-menu-height: 40;
+$context-menu-width: 260;
 // ***************  Backward Compatibility - Deprecated  **************
 $brand-color: #006bff; // - refs in playkit-ui and related-plugin
 $white: #ffffff; // - refs in playkit-ui and related-plugin
@@ -72,6 +74,8 @@ $new-live-color: #e12437; // - refs in related-plugin
   defaultTransitionTime: $default-transition-time;
   bottomBarMaxHeight: $bottom-bar-max-height;
   topBarMaxHeight: $top-bar-max-height;
+  contextMenuHeight: $context-menu-height;
+  contextMenuWidth: $context-menu-width;
   // ***************  Backward Compatibility - Deprecated  **************
   brandColor: $brand-color;
   white: $white;
